--- a/charts/kubernetes-mcp-server/values.yaml
+++ b/charts/kubernetes-mcp-server/values.yaml
@@ -228,16 +228,16 @@ metrics:
       # Cluster-level (for Telemeter):
       # - cluster:k8s_mcp_tool_calls:sum - Total tool calls across all tools
       # - cluster:k8s_mcp_tool_errors:sum - Total tool errors across all tools
-      # - cluster:k8s_mcp_tool_error_rate:ratio - Error rate (errors/calls) - local only
+      # - cluster:k8s_mcp_tool_error_rate:ratio - Error rate (errors/calls)
       # - cluster:k8s_mcp_http_requests:sum - Total HTTP requests
       # - cluster:k8s_mcp_http_requests_by_status:sum - HTTP requests by status class
       # - cluster:k8s_mcp_server_info:count - Server instance count
       #
-      # Namespace-level (for multi-tenant RBAC, grouped by k8s_namespace_name label):
-      # - namespace:k8s_mcp_tool_calls:sum - Tool calls by k8s_namespace_name
-      # - namespace:k8s_mcp_tool_errors:sum - Tool errors by k8s_namespace_name
-      # - namespace:k8s_mcp_tool_error_rate:ratio - Error rate by k8s_namespace_name
-      # - namespace:k8s_mcp_http_requests:sum - HTTP requests by k8s_namespace_name
+      # Namespace-level (for multi-tenant RBAC, grouped by namespace label):
+      # - namespace:k8s_mcp_tool_calls:sum - Tool calls by namespace
+      # - namespace:k8s_mcp_tool_errors:sum - Tool errors by namespace
+      # - namespace:k8s_mcp_tool_error_rate:ratio - Error rate by namespace
+      # - namespace:k8s_mcp_http_requests:sum - HTTP requests by namespace
       enabled: true
     # -- Additional custom recording rules (appended to default rules if enabled)
     # Example:
