--- a/evals/tasks/kubernetes/fix-service-with-no-endpoints/fix-service-with-no-endpoints.yaml
+++ b/evals/tasks/kubernetes/fix-service-with-no-endpoints/fix-service-with-no-endpoints.yaml
@@ -12,4 +12,4 @@ steps:
   cleanup:
     file: cleanup.sh
   prompt:
-    inline: "Our frontend application in the webshop-frontend namespace is reporting connection errors. The logs show: 'Error: connection to web-app-service.webshop-frontend.svc.cluster.local failed: connection refused'. Can you help diagnose and fix this issue?"
+    inline: "Our frontend application in the webshop-frontend namespace is reporting connection errors. The logs show: 'Error: connection to web-app-service.webshop-frontend.svc.cluster.local failed: connection refused'. Can you help diagnose why pods aren't running and fix the deployment?"
