--- a/evals/tasks/kubernetes/multi-container-pod-communication/multi-container-pod-communication.yaml
+++ b/evals/tasks/kubernetes/multi-container-pod-communication/multi-container-pod-communication.yaml
@@ -17,5 +17,6 @@ steps:
       1. A 'web-server' nginx instance that serves traffic
       2. A 'logger' busybox instance that processes those logs from a shared volume, 'logs-volume' with 'tail -f /var/log/nginx/access.log'
 
+      Both containers should be defined in spec.containers (not as init containers or sidecars).
       Both containers should mount logs-volume at '/var/log/nginx'.
-      The logger should only start once the web server is ready. The pod should be considered ready when the web server is serving traffic.
+      The pod should be considered ready when the web server is serving traffic.
